# application-profiles

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-build-deploy.yaml  python-build.yaml  python-publish.yaml  python-release.yaml  python-versioning-commit.yaml  python-versioning-preparation.yaml  python-workflow.yaml
profiles/: application-test.yaml  application-test2.yml  application.yaml
tests/: test_application_profile.py
