[tool.poetry]
name = "application-profiles"
version = "0.1.0"
description = "This project brings the option to use 'Properties Files' like in Spring Framework but in whatever Python context"
authors = ["Diego Sepulveda"]
readme = "README.md"
repository = "https://github.com/diegosep/application-profiles"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
packages = [{ include = "application_profiles" }]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
safety = "^2.3.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'
